k8s/node-red/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-red
  namespace: node-red
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-red
  template:
    metadata:
      labels:
        app: node-red
    spec:
      volumes:
        - name: node-red
          persistentVolumeClaim:
            claimName: node-red
      containers:
        - name: node-red
          image: nodered/node-red:2.2.3
          ports:
            - containerPort: 1880
          volumeMounts:
            - mountPath: /data
              name: node-red
