k8s/node-red/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-red
  namespace: node-red
spec:
  selector:
    app: node-red
  ports:
    - name: node-red
      protocol: TCP
      port: 1880
